updated index for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="You don't need to check the weather outside, through the window😁"
+      content="You don't need to check the weather through the window😁
+      F_Weather is here for you"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
